Reference Mac setup scripts (#101)

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -20,8 +20,9 @@ nav:
       - Install Windows Subsystem for Linux (WSL): local-development-setup/install-wsl.md
       - Update WSL configuration: local-development-setup/wsl.md
       - Add user to sudoers file: local-development-setup/setup-sudoers.md
-    - macOs:
+    - Mac:
       - Setup command line tools: local-development-setup/setup-macos-command-line-tools.md
+      - Mac Setup Scripts: local-development-setup/mac-setup-scripts.md
     - Common:
       - Install Docker Desktop: local-development-setup/install-docker-desktop.md
       - Install Docker Compose: local-development-setup/install-docker-compose.md
