--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -59,7 +59,7 @@ nav:
     - Logging: development-patterns/logging.md
     - Authentication:
       - Defra Identity: development-patterns/authentication/defra-identity.md
-      - Azure AD: development-patterns/authentication/azure-ad.md
+      - Entra: development-patterns/authentication/entra.md
     - Analytics: development-patterns/analytics.md
     - Git secrets: development-patterns/git-secrets.md
     - Security: development-patterns/security.md
